--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
 <body>
-<script src="http://megatimer.ru/s/ba8b8c07c4d7ba81d18ee19328c8442f.js"></script>
+
+<p id="demo"></p>
+
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script> 
+
 </body>
+</html>
