--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 
+<h1>My First JavaScript</h1>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
 <p id="demo"></p>
 
-<script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
-</script> 
-
 </body>
-</html>
+</html> 
