--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
 <p id="demo"></p>
+<script src="http://megatimer.ru/s/b30f583ca89fc7125ce3ad6991a54e9d.js"></script>
 
 </body>
 </html> 
