--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="/path/to/jquery.countdown.js"></script>
-</head>
 <body>
-
-<h1>My 2 JavaScript</h1>
-<script type="text/javascript">
-$(function() {
-    $('.yourCountdownContainer').countdown({
-        date: "June 7, 2087 15:03:26"
-    });
-});
-</script>
+<script src="http://megatimer.ru/s/b30f583ca89fc7125ce3ad6991a54e9d.js"></script>
 </body>
 </html> 
