--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<script src="http://megatimer.ru/s/b30f583ca89fc7125ce3ad6991a54e9d.js"></script>
+<script>
+(function(){var _id="b30f583ca89fc7125ce3ad6991a54e9d";while(document.getElementById("timer"+_id))_id=_id+"0";document.write("<div id='timer"+_id+"' style='min-width:382px;height:72px;'></div>");var _t=document.createElement("script");_t.src="http://megatimer.ru/timer/timer.min.js";var _f=function(_k){var l=new MegaTimer(_id, {"view":[1,1,1,1],"type":{"currentType":"1","params":{"usertime":true,"tz":"3","utc":1501545600000}},"design":{"type":"text","params":{"number-font-family":{"family":"Comfortaa","link":"<link href='http://fonts.googleapis.com/css?family=Comfortaa&subset=latin,cyrillic' rel='stylesheet' type='text/css'>"},"number-font-size":"60","number-font-color":"#000","separator-margin":"20","separator-on":true,"separator-text":":","text-on":true,"text-font-family":{"family":"Comfortaa","link":"<link href='http://fonts.googleapis.com/css?family=Comfortaa&subset=latin,cyrillic' rel='stylesheet' type='text/css'>"},"text-font-size":"12","text-font-color":"#c7c7c7"}},"designId":1,"theme":"white","width":382,"height":72});if(_k!=null)l.run();};_t.onload=_f;_t.onreadystatechange=function(){if(_t.readyState=="loaded")_f(1);};var _h=document.head||document.getElementsByTagName("head")[0];_h.appendChild(_t);}).call(this);
+</script>
+<script type="text/javascript">
+    document.write ('<table width="100%" border="1">');
+    for (i=1; i<6; i++) {
+      document.writeln("<tr>");
+      for (j=1; j<6; j++) document.write("<td>" + i + j + "<\/td>");
+      document.writeln("<\/tr>");
+    }
+    document.write ("<\/table> ");
+  </script>
 </body>
 </html> 
