--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <script src="jquery.countdown.js"></script>
-
+<div>Test</div>
 <div class="example-base">
   Limited Time Only!
   <span id="clock"></span>
