--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
-<!DOCTYPE html>
-<html>
-<body>
-<script src="jquery.countdown.js"></script>
-<div>Test</div>
-<div class="example-base">
-  Limited Time Only!
-  <span id="clock"></span>
-</div>
-
-<script type="text/javascript">
-  // 15 days from now!
-  var date = new Date(new Date().valueOf() + 15 * 24 * 60 * 60 * 1000);
-  $('#clock').countdown(date, function(event) {
-    $(this).html(event.strftime('%D days %H:%M:%S'));
-  });
-</script>
-
-</body>
-</html> 
+<?xml version='1.0' encoding='utf-8'?>
+<cluster>
+  <type>center</type>
+  <name>qa3</name>
+  <availability>1</availability>
+  <status></status>
+  <version>1.0.1</version>
+  <items>
+    <item>
+      <type>periphery</type>
+      <name>1</name>
+      <availability>1</availability>
+      <status></status>
+      <version>1.0.1</version>
+    </item>
+    <item>
+      <type>periphery</type>
+      <name>2</name>
+      <availability>1</availability>
+      <status></status>
+      <version>1.0.1</version>
+    </item>
+  </items>
+</cluster>
