--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <?xml version='1.0' encoding='utf-8'?>
 <cluster>
   <type>center</type>
-  <name>qa3</name>
+  <name>wowsru</name>
   <availability>1</availability>
   <status></status>
-  <version>1.0.1</version>
   <items>
     <item>
       <type>periphery</type>
-      <name>1</name>
+      <name>login1.worldofwarships.ru:20020</name>
       <availability>1</availability>
       <status></status>
-      <version>1.0.1</version>
+      <version>0, 6, 9, 277484</version>
     </item>
     <item>
       <type>periphery</type>
-      <name>2</name>
+      <name>login2.worldofwarships.ru:20020</name>
       <availability>1</availability>
+      <version>0, 6, 9, 277484</version>
       <status></status>
-      <version>1.0.1</version>
     </item>
   </items>
 </cluster>
