--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <name>login1.worldofwarships.ru:20020</name>
       <availability>1</availability>
       <status></status>
-      <version>0, 6, 10, 276954</version>
+      <version>0, 6, 10, 278489</version>
     </item>
     <item>
       <type>periphery</type>
       <name>login2.worldofwarships.ru:20020</name>
       <availability>1</availability>
-      <version>0, 6, 9, 277484</version>
+      <version>0, 6, 9, 2784489</version>
       <status></status>
     </item>
   </items>
